--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Save user</title>
   </head>
   <body>
@@ -34,6 +34,7 @@
             <button type="Button" class="btn btn-primary" onclick="savedata()">Submit</button>
           </form>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> -->
@@ -69,9 +70,18 @@
                 if(phone != '' && phone != undefined && phone != null){
                     if(desc != '' && desc != undefined && desc != null){
                         if(!validatEmail(email)){
-                            alert("Email is not valid");
+                            swal({
+                                title: "Error!",
+                                text: "Email is not valid!",
+                                icon: "error",
+                            });
                         }else if(!validatPhone(phone)){
-                            alert("Phone number is not valid");
+                            swal({
+                                title: "Error!",
+                                text: "Phone number is not valid!",
+                                icon: "error",
+                            });
+                            // alert("Phone number is not valid");
                         }else{
                             var settings = {
                                 "async": true,
@@ -91,20 +101,49 @@
                             }
 
                             $.ajax(settings).done(function (response) {
-                            console.log(response);
+                                console.log(response)
+                                if(response.success == true){
+                                    swal({
+                                        title: "Congratulation!",
+                                        text: "User registered successfully!",
+                                        icon: "success",
+                                    });
+                                }else{
+                                    swal({
+                                        title: "Error!",
+                                        text: response.msg,
+                                        icon: "error",
+                                    });
+                                }
                             });
                         }
                     }else{
-                        alert("Description is missing");
+                        swal({
+                                title: "Error!",
+                                text: "Description is missing!",
+                                icon: "error",
+                            });
                     }
                 }else{
-                    alert("Phone is missing");
+                    swal({
+                            title: "Error!",
+                            text: "Phone number is missing!",
+                            icon: "error",
+                        });
                 }
               }else{
-                alert("Email is missing");
+                swal({
+                        title: "Error!",
+                        text: "Email is missing!",
+                        icon: "error",
+                    });
              }
             }else{
-                alert("Name is missing")
+                swal({
+                        title: "Error!",
+                        text: "Name is missing!",
+                        icon: "error",
+                    });
             } 
         }
     </script>
